@@ -1,5 +1,11 @@
 2018-01-06  Araki Ken  <arakiken@users.sf.net>
 
+	* gdiplus.cpp: Sixel graphics is resized to specified width and height.
+
+	* vt_parser.c: Minor fixes.
+
+2018-01-06  Araki Ken  <arakiken@users.sf.net>
+
 	* DRCS-SIXEL-v2: Updated.
 
 	* vt_parser.c:
